--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,7 @@
                 "-fcolor-diagnostics",
                 "-fansi-escape-codes",
                 "-g",
+                "-std=c++17",  // C++17 표준 지정
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
